Added few test cases on super company and also implemented lombok

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.fileout=org.apache.log4j.FileAppender
 log4j.appender.fileout.ImmediateFlush=true
 log4j.appender.fileout.Append=false
-log4j.appender.fileout.File=activityLog.log
+log4j.appender.fileout.File=src/test/resources/log/activityLog_${current.date}.log
 log4j.appender.fileout.layout=org.apache.log4j.HTMLLayout
 log4j.appender.fileout.layout.ConversionPattern=%d %p [%c] - %m%n
 
@@ -21,7 +21,7 @@ log4j.appender.fileout.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.fileInfo=org.apache.log4j.FileAppender
 log4j.appender.fileInfo.ImmediateFlush=true
 log4j.appender.fileInfo.Append=false
-log4j.appender.fileInfo.File=myLog.log
+log4j.appender.fileInfo.File=src/test/resources/log/myLog_${current.date}.log
 log4j.appender.fileInfo.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileInfo.layout.ConversionPattern=%d %p [%c] - %m%n
 
