refactor and changes base class to abstract class

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.fileout=org.apache.log4j.FileAppender
 log4j.appender.fileout.ImmediateFlush=true
 log4j.appender.fileout.Append=false
-log4j.appender.fileout.File=src/test/resources/log/activityLog_HTML${current.date}.log
+log4j.appender.fileout.File=src/test/resources/log/activityLog_${current.date}.html
 log4j.appender.fileout.layout=org.apache.log4j.HTMLLayout
 log4j.appender.fileout.layout.ConversionPattern=%d %p [%c] - %m%n
 
