added comments and refactor member class

--- a/src/main/resources/conf/dev2.properties
+++ b/src/main/resources/conf/dev2.properties
@@ -37,8 +37,8 @@ EDIT_CONFIGURATION_NAME=tester
 # VEHICLE
 VEHICLE_PLATE_NUMBER= RO-TEST-96
 EDIT_VEHICLE_PLATE_NUMBER=GF-234-SD
-VEHICLE_MODEL=Renault
-VEHICLE_BRAND=Clio
+VEHICLE_BRAND=Renault
+VEHICLE_MODEL=Clio
 VEHICLE_VERSION=1.2L 5 portes
 VEHICLE_COLOR=Red
 
