changes made on valid.properties

--- a/src/main/resources/conf/valid2.properties
+++ b/src/main/resources/conf/valid2.properties
@@ -1,49 +1,49 @@
 #URLS
-BO_URL=https://admin-dev-2-glide.tech.rcimobility.com
-BASEURI=https://elb-gwadmin-dev-2-glide.tech.rcimobility.com
+BO_URL=https://admin-valid-2-glide.tech.rcimobility.com
+BASEURI=https://elb-gwadmin-valid-2-glide.tech.rcimobility.com
 
 # BACK OFFICE ADMINISTRATOR
 BO_ADMIN=admin@glidemobility.com
 
 # BACK USER
-EDIT_BACK_USER=sujit.pandey+test@glidemobility.com
+EDIT_BACK_USER=sujit.pandey+1a@glidemobility.com
 
 # PASSWORD
 BO_PASSWORD=1Aaaaaaa
 
 # MEMBER
-MEMBER_LOGIN=sujit.pandey+14@glidemobility.com
-MEMBER_FIRSTNAME= string
-MEMBER_LASTNAME= string
-EDIT_MEMBER=sujit.pandey+8@glidemobility.com
+MEMBER_LOGIN=sujit.pandey+24@glidemobility.com
+MEMBER_FIRSTNAME= sujit
+MEMBER_LASTNAME= pandey
+EDIT_MEMBER=sujit.pandey+33@glidemobility.com
 
 #SUPER COMPANY
-SUPER_COMPANY_NAME=ASC
-EDIT_SUPER_COMPANY_NAME=ascaasasc
+SUPER_COMPANY_NAME=AirStone
+EDIT_SUPER_COMPANY_NAME=Anna
 
 #SUPER COMPANY CONFIGURATION
-SUPER_COMPANY_CONFIGURATION=testconfig
-SUB_COMPANY_CONFIGURATION=testconfig
+SUPER_COMPANY_CONFIGURATION=test_config
+SUB_COMPANY_CONFIGURATION=test_config
 
 #SUPER COMPANY EMAIL TEMPLATE
 SUPER_COMPANY_EMAIL_TEMPLATE=rrent
 
 # SUB COMPANY
-EDIT_SUB_COMPANY_NAME= testerOfHello
+EDIT_SUB_COMPANY_NAME= test_company
 
 #EDIT CONFIGURATION
-EDIT_CONFIGURATION_NAME=tester
+EDIT_CONFIGURATION_NAME=test_valid
 
 # VEHICLE
-VEHICLE_PLATE_NUMBER= RO-TEST-96
-EDIT_VEHICLE_PLATE_NUMBER=GF-234-SD
+VEHICLE_PLATE_NUMBER=kkkkkkkkk
+EDIT_VEHICLE_PLATE_NUMBER=AABBCCDDEEFF
 VEHICLE_MODEL=Renault
-VEHICLE_BRAND=Clio
-VEHICLE_VERSION=1.2L 5 portes
+VEHICLE_BRAND=Captur
+VEHICLE_VERSION=Intens
 VEHICLE_COLOR=Red
 
 # SITES AND PARKING
-SITE_NAME=Hodor
-EDIT_SITE_NAME=test_site
-EDIT_PARKING_NAME=test_parking
+SITE_NAME=testCompanySite
+EDIT_SITE_NAME=test_site_valid
+EDIT_PARKING_NAME=test_parking_valid
 
