added edit contract test

--- a/src/main/resources/conf/dev2.properties
+++ b/src/main/resources/conf/dev2.properties
@@ -18,7 +18,7 @@ MEMBER_LASTNAME= string
 EDIT_MEMBER=sujit.pandey+8@glidemobility.com
 
 #SUPER COMPANY
-SUPER_COMPANY_NAME=ASC
+SUPER_COMPANY_NAME=asc
 EDIT_SUPER_COMPANY_NAME=ascaasasc
 
 #SUPER COMPANY CONFIGURATION
