Added booking verification test

--- a/src/main/resources/conf/dev2.properties
+++ b/src/main/resources/conf/dev2.properties
@@ -22,8 +22,8 @@ SUPER_COMPANY_NAME=asc
 EDIT_SUPER_COMPANY_NAME=ascaasasc
 
 #SUPER COMPANY CONFIGURATION
-SUPER_COMPANY_CONFIGURATION=testconfig
-SUB_COMPANY_CONFIGURATION=testconfig
+SUPER_COMPANY_CONFIGURATION= testconfig
+SUB_COMPANY_CONFIGURATION= testconfig
 
 #SUPER COMPANY EMAIL TEMPLATE
 SUPER_COMPANY_EMAIL_TEMPLATE=rrent
