added vehicle planning locators

--- a/src/main/resources/conf/valid2.properties
+++ b/src/main/resources/conf/valid2.properties
@@ -30,6 +30,7 @@ SUPER_COMPANY_EMAIL_TEMPLATE=rrent
 
 # SUB COMPANY
 EDIT_SUB_COMPANY_NAME= test_company
+SUB_COMPANY_NAME= testingCompany
 
 #EDIT CONFIGURATION
 EDIT_CONFIGURATION_NAME=test_valid
