changes made on super company test and also added new filter on super company

--- a/src/main/resources/conf/valid2.properties
+++ b/src/main/resources/conf/valid2.properties
@@ -19,11 +19,11 @@ EDIT_MEMBER=sujit.pandey+33@glidemobility.com
 
 #SUPER COMPANY
 SUPER_COMPANY_NAME=AirStone
-EDIT_SUPER_COMPANY_NAME=Anna
+EDIT_SUPER_COMPANY_NAME= Anna
 
 #SUPER COMPANY CONFIGURATION
-SUPER_COMPANY_CONFIGURATION=test_config
-SUB_COMPANY_CONFIGURATION=test_config
+SUPER_COMPANY_CONFIGURATION=testtest
+SUB_COMPANY_CONFIGURATION=testtest
 
 #SUPER COMPANY EMAIL TEMPLATE
 SUPER_COMPANY_EMAIL_TEMPLATE=rrent
